<resources>
    <string name="app_name">Conduit</string>
    <string name="your_feed">YOUR FEED</string>
    <string name="global_feed">GLOBAL FEED</string>
    <string name="title">Conduit</string>
    <string name="login_register">Login/Register</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="backend_url">Backend URL</string>
    <string name="api_url">https://conduit.productionready.io/api</string>
    <string name="setting_title">Setting</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="back_to_login">Back to Login</string>
    <string name="realworld_main_url">https://realworld.io</string>
    <string name="about_paragraph1">This app is an exemplary project to show how a Medium.com clone (called Conduit) is built using native platform (Android) to connect to any other backend from</string>
    <string name="about_paragraph2">RealWorld example projects have been initiated by Thinkster.io to provide a real-world scenario as tutorial to see how many different backend/frontent programming language and/or frammework could work out in your project.</string>
    <string name="close">close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer_close</string>
    <string name="no_article_found">No Article Found</string>
    <string name="default_favourite">0</string>
    <string name="read_more">read more…</string>
    <string name="logout">Logout</string>
    <string name="hello">hello</string>
    <string name="text_by">By - </string>
    <string name="tags">tags</string>
    <string name="comment">comment</string>
    <string name="post_comment">Post Comment</string>
    <string name="retry">retry</string>
    <string name="article_title">Title</string>
    <string name="description">Description</string>
    <string name="article_body">Body</string>
    <string name="article_tags">Tags</string>
    <string name="post">post article</string>
    <string name="tags_instructions">*Tags are optional</string>
    <string name="add_tag">add tag</string>
    <string name="no_tags_available">no tags available</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_photo">Add Photo</string>
    <string name="logo">Logo</string>
</resources>